trunk/Archive/256c1c911d9076278315bfd005d51cbc-1630e143f4e6d6a4b02cbb509e292947/output
+ g++-4.8 -std=c++11 -O2 -Wall -Wextra -pedantic -pthread main.cpp
main.cpp: In function 'int main()':
main.cpp:22:8: error: request for member 'foo' is ambiguous
     ab.foo();
        ^
main.cpp:10:18: note: candidates are: virtual void B::foo()
     virtual void foo() {}
                  ^
main.cpp:5:18: note:                 virtual void A::foo()
     virtual void foo() {}
                  ^
